samples/_failures_safe/1761211554_4f7a2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d0fd5f4.c: In function ‘main’:
./samples/SAFE/__tmp_6d0fd5f4.c:154:20: error: missing terminating " character
  154 |             printf("\nMatrix B:\
      |                    ^~~~~~~~~~~~~
./samples/SAFE/__tmp_6d0fd5f4.c:154:13: error: expected expression at end of input
  154 |             printf("\nMatrix B:\
      |             ^~~~~~
./samples/SAFE/__tmp_6d0fd5f4.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6d0fd5f4.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6d0fd5f4.c:154:13: error: expected declaration or statement at end of input
